@@ -9,6 +9,13 @@ def bin_copy(src, dest, mode=0600):
     else:
         os.chmod(dest, mode)
 
+def bin_mv(src, dest, mode=0600):
+    try:
+        subprocess.check_call(['/bin/mv', src, dest])
+    except subprocess.CalledProcessError:
+        raise OSError("Move failed %s %s" % (src, dest))
+    else:
+        os.chmod(dest, mode)
 
 if __name__ == "__main__":
     import sys
