@@ -1,3 +1,7 @@
+* On update() and create(), copy asynchronously where possible, and
+  add new "transfer_ownership" argument to update() and create() that
+  allow the datastore to move the object rather than copy it (dcbw)
+
 Snapshot a111996299
 
 Snapshot 356b35a278
